--- a/turbo/templates/turbo/turbo_stream_source.html
+++ b/turbo/templates/turbo/turbo_stream_source.html
@@ -1,1 +1,1 @@
-<turbo-channels-stream-source signed-channel-name="{{ signed_channel_name }}" />
+<turbo-channels-stream-source signed-channel-name="{{ signed_channel_name }}" ></turbo-channels-stream-source>
